Fix overflow on td data-label="Feil"
Adjust truncated styles to omit td data-label="Feil"

--- a/src/css/_molecules/_table-row.css
+++ b/src/css/_molecules/_table-row.css
@@ -24,10 +24,8 @@
 }
 
 /* Add truncation to cells in rows with class '.table__row--truncated' */
-.table__row--truncated:not(.dd-open) {
-  & > td {
-    @extend .truncated;
-  }
+.table__row--truncated:not(.dd-open) > td:not([data-label="Feil"]) {
+  @extend .truncated;
 }
 
 .table__row--truncated {
