--- a/src/style.css
+++ b/src/style.css
@@ -507,14 +507,14 @@ td.text--center, .fake-table__row *.text--center{
   display:inline-block;
   vertical-align:middle;
 }
-.truncated, .table__cell--truncated, .table__row--truncated:not(.dd-open) > td{
+.truncated, .table__cell--truncated, .table__row--truncated:not(.dd-open) > td:not([data-label="Feil"]){
   white-space:nowrap;
   overflow:hidden;
   text-overflow:ellipsis;
 }
 @media (min-width: 960px){
 
-  .truncated, .table__cell--truncated, .table__row--truncated:not(.dd-open) > td{
+  .truncated, .table__cell--truncated, .table__row--truncated:not(.dd-open) > td:not([data-label="Feil"]){
     max-width:100px;
   }
 }
